[package]
name = "iosplit"
version = "0.1.0"
edition = "2021"
default-run = "iosplit"

[dependencies]
anyhow = "1.0.98"
crossterm = { version = "0.29.0", features = ["event-stream"] }
rand = "0.9.1"
ratatui = "0.29.0"
textwrap = "0.16.2"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"


[[bin]]
name = "iosplit"
path = "src/main.rs"

[[bin]]
name = "tester"
path = "src/tester.rs"
